# window-starter

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  msvc-code-analysis.yml
cmake/: gtest.cmake
src/: CMakeLists.txt  main.cpp  window.h
src/platform/: null_window.cpp  win32_window.cpp
test/: CMakeLists.txt
